Access to wordpress but not admin

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,22 +1,15 @@
-# Use the penultimate stable version of Debian
-FROM debian:buster-slim
+FROM debian:bullseye
 
-# Install MariaDB
-RUN apt-get update && apt-get install -y \
-    mariadb-server \
-    && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get upgrade -y && apt-get install mariadb-server -y
 
-# Copy the custom configuration
 COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
-# Copy the startup script
-COPY tools/setup.sh /usr/local/bin/
+COPY tools/script.sh .
 
-# Make the script executable
-RUN chmod +x /usr/local/bin/setup.sh
+RUN mkdir -p /var/run/mysqld && chown -R mysql:mysql /var/run/mysqld && chmod 755 /var/run/mysqld
 
-# Expose port 3306
-EXPOSE 3306
+RUN chmod 755 ./script.sh 
 
-# Start the database
-CMD ["setup.sh"]
+ENTRYPOINT ["./script.sh"]
+
+CMD ["mysqlsafe"]
