--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,72 +1,94 @@
 version: '3.8'
 
+networks:
+  inception:
+    name: inception
+    driver: bridge
+
+volumes:
+  mariadb:
+    name: mariadb
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/thomas/data/mariadb'
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/thomas/data/wordpress'
+
 services:
   nginx:
-    build:
-      context: ./requirements/nginx
-      args:
-        DOMAIN_NAME: ${DOMAIN_NAME}
+    build: requirements/nginx/.
+    depends_on:
+      wordpress:
+        condition: service_healthy
     container_name: nginx
+    restart: always
     ports:
       - "443:443"
-    volumes:
-      - wordpress_files:/var/www/html
+    environment:
+      - DOMAIN_NAME=${DOMAIN_NAME}
     networks:
-      - inception_network
-    depends_on:
-      - wordpress
-
+      - inception
+    volumes:
+      - wordpress:/var/www/html/
 
   mariadb:
-    build:
-      context: ./requirements/mariadb
+    build: requirements/mariadb/.
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
+      start_period: 10s
+      timeout: 10s
+    restart: always
     container_name: mariadb
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-    volumes:
-      - db_data:/var/lib/mysql
+    ports:
+      - "3306:3306"
     networks:
-      - inception_network
+      - inception
+    volumes:
+      - mariadb:/var/lib/mysql
+    environment:
+      SQL_DATABASE: ${MYSQL_DATABASE}
+      SQL_USER: ${MYSQL_USER}
+      SQL_PASSWORD: ${MYSQL_PASSWORD}
 
   wordpress:
-    build:
-      context: ./requirements/wordpress
+    build: requirements/wordpress/.
+    depends_on:
+      mariadb:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "netstat", "-an", "|", "grep", "9000"]
+      interval: 10s
+      retries: 5
+      start_period: 10s
+      timeout: 10s
+    restart: always
     container_name: wordpress
+    networks:
+      - inception
+    expose:
+      - "9000"
+    volumes:
+      - wordpress:/var/www/html/
     environment:
-      WORDPRESS_DB_HOST: mariadb
-      WORDPRESS_DB_USER: ${MYSQL_USER}
-      WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
-      WORDPRESS_DB_NAME: ${MYSQL_DATABASE}
-      DOMAIN_NAME: ${DOMAIN_NAME}
+      SQL_DATABASE: ${MYSQL_DATABASE}
+      SQL_USER: ${MYSQL_USER}
+      SQL_PASSWORD: ${MYSQL_PASSWORD}
+      WP_USER: ${WP_USER}
+      WP_USER_EMAIL: ${WP_USER_EMAIL}
+      WP_URL: ${WP_URL}
+      WP_TITLE: ${WP_TITLE}
       WP_ADMIN_USER: ${WP_ADMIN_USER}
       WP_ADMIN_PASSWORD: ${WP_ADMIN_PASSWORD}
       WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
-      WP_USER: ${WP_USER}
       WP_USER_PASSWORD: ${WP_USER_PASSWORD}
-      WP_USER_EMAIL: ${WP_USER_EMAIL}
-    volumes:
-      - wordpress_files:/var/www/wordpress
-    networks:
-      - inception_network
-    depends_on:
-      - mariadb
-
-volumes:
-  db_data:
-    driver: local
-    driver_opts:
-      type: none
-      device: /home/thomas/data/db
-      o: bind
-  wordpress_files:
-    driver: local
-    driver_opts:
-      type: none
-      device: /home/thomas/data/wordpress
-      o: bind
-
-networks:
-  inception_network:
+      DOMAIN_NAME: ${DOMAIN_NAME}
+    env_file: .env
