--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,18 +1,43 @@
-events {}
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+error_log /var/log/nginx/error.log;
+include /etc/nginx/modules-enabled/*.conf;
+
+events {
+	worker_connections 768;
+}
 
 http {
-    server {
-        listen 443 ssl;
-        server_name ${DOMAIN_NAME};
 
-        ssl_certificate     /etc/nginx/ssl/${DOMAIN_NAME}.crt;
-        ssl_certificate_key /etc/nginx/ssl/${DOMAIN_NAME}.key;
-        ssl_protocols       TLSv1.2 TLSv1.3;
-        ssl_ciphers         HIGH:!aNULL:!MD5;
 
-        location / {
-            proxy_pass http://wordpress:9000;
-            proxy_set_header Host $host;
-        }
-    }
+	sendfile on;
+	tcp_nopush on;
+	types_hash_max_size 2048;
+
+	include /etc/nginx/mime.types;
+	default_type application/octet-stream;
+
+	access_log /var/log/nginx/access.log;
+
+	server {
+		server_name	tviejo.42.fr;
+		listen		443 ssl;
+		listen		[::]:443 ssl;
+		ssl_certificate /etc/nginx/ssl/inception.crt;
+		ssl_certificate_key /etc/nginx/ssl/inception.key;
+		ssl_protocols	TLSv1.2 TLSv1.3;
+
+		root /var/www/html;
+		index index.php index.html index.htm index.nginx-debian.html;
+
+		location / {
+			try_files $uri $uri/ =404;
+		}
+
+		location ~ \.php$ {
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
+		}
+	}
 }
