improved but still not working

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -21,23 +21,24 @@ http {
 	access_log /var/log/nginx/access.log;
 
 	server {
-		server_name	tviejo.42.fr;
-		listen		443 ssl;
-		listen		[::]:443 ssl;
-		ssl_certificate /etc/nginx/ssl/inception.crt;
-		ssl_certificate_key /etc/nginx/ssl/inception.key;
-		ssl_protocols	TLSv1.2 TLSv1.3;
+    listen 443 ssl;
+    server_name ${DOMAIN_NAME};
 
-		root /var/www/html;
-		index index.php index.html index.htm index.nginx-debian.html;
+    ssl_certificate /etc/nginx/ssl/inception.crt;
+    ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-		location / {
-			try_files $uri $uri/ =404;
-		}
+    root /var/www/html;
+    index index.php index.html;
 
-		location ~ \.php$ {
-			include snippets/fastcgi-php.conf;
-			fastcgi_pass wordpress:9000;
-		}
-	}
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
+
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+    }
 }
