--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,9 +1,15 @@
-version: '3.8'
-
 networks:
   inception:
     name: inception
     driver: bridge
+
+secrets:
+  db_password:
+    file: secrets/db_password.txt
+  db_root_password:
+    file: secrets/db_root_password.txt
+  wp_password:
+    file: secrets/wp_password.txt
 
 volumes:
   mariadb:
@@ -12,14 +18,14 @@ volumes:
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/home/thomas/data/mariadb'
+      device: '/home/tviejo/data/mariadb'
   wordpress:
     name: wordpress
     driver: local
     driver_opts:
       type: 'none'
       o: 'bind'
-      device: '/home/thomas/data/wordpress'
+      device: '/home/tviejo/data/wordpress'
 
 services:
   nginx:
@@ -31,9 +37,7 @@ services:
     restart: always
     ports:
       - "443:443"
-    environment:
-      - DOMAIN_NAME=${DOMAIN_NAME}
-    networks:
+    networks: 
       - inception
     volumes:
       - wordpress:/var/www/html/
@@ -41,7 +45,7 @@ services:
   mariadb:
     build: requirements/mariadb/.
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      test: mysqladmin ping
       interval: 10s
       retries: 5
       start_period: 10s
@@ -49,15 +53,14 @@ services:
     restart: always
     container_name: mariadb
     ports:
-      - "3306:3306"
+      - "3306"
     networks:
       - inception
     volumes:
       - mariadb:/var/lib/mysql
-    environment:
-      SQL_DATABASE: ${MYSQL_DATABASE}
-      SQL_USER: ${MYSQL_USER}
-      SQL_PASSWORD: ${MYSQL_PASSWORD}
+    env_file: .env
+    secrets:
+      - db_password
 
   wordpress:
     build: requirements/wordpress/.
@@ -65,7 +68,7 @@ services:
       mariadb:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "netstat", "-an", "|", "grep", "9000"]
+      test: netstat -an | grep 9000 > /dev/null; if [ $$? != 0 ]; then exit 1; fi;
       interval: 10s
       retries: 5
       start_period: 10s
@@ -78,17 +81,8 @@ services:
       - "9000"
     volumes:
       - wordpress:/var/www/html/
-    environment:
-      SQL_DATABASE: ${MYSQL_DATABASE}
-      SQL_USER: ${MYSQL_USER}
-      SQL_PASSWORD: ${MYSQL_PASSWORD}
-      WP_USER: ${WP_USER}
-      WP_USER_EMAIL: ${WP_USER_EMAIL}
-      WP_URL: ${WP_URL}
-      WP_TITLE: ${WP_TITLE}
-      WP_ADMIN_USER: ${WP_ADMIN_USER}
-      WP_ADMIN_PASSWORD: ${WP_ADMIN_PASSWORD}
-      WP_ADMIN_EMAIL: ${WP_ADMIN_EMAIL}
-      WP_USER_PASSWORD: ${WP_USER_PASSWORD}
-      DOMAIN_NAME: ${DOMAIN_NAME}
     env_file: .env
+    secrets:
+      - db_password
+      - db_root_password
+      - wp_password
