--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -6,39 +6,57 @@ include /etc/nginx/modules-enabled/*.conf;
 
 events {
 	worker_connections 768;
+	# multi_accept on;
 }
 
 http {
 
+	##
+	# Basic Settings
+	##
 
 	sendfile on;
 	tcp_nopush on;
 	types_hash_max_size 2048;
+	# server_tokens off;
+
+	# server_names_hash_bucket_size 64;
+	# server_name_in_redirect off;
 
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
 
+	##
+	# SSL Settings
+	##
+
+	# ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+	# ssl_prefer_server_ciphers on;
+
+	##
+	# Logging Settings
+	##
+
 	access_log /var/log/nginx/access.log;
 
 	server {
-    listen 443 ssl;
-    server_name ${DOMAIN_NAME};
+		server_name	tviejo.42.fr;
+		listen		443 ssl;
+		listen		[::]:443 ssl;
+		ssl_certificate /etc/nginx/ssl/inception.crt;
+		ssl_certificate_key /etc/nginx/ssl/inception.key;
+		ssl_protocols	TLSv1.2 TLSv1.3;
 
-    ssl_certificate /etc/nginx/ssl/inception.crt;
-    ssl_certificate_key /etc/nginx/ssl/inception.key;
+		root /var/www/html;
+		index index.php index.html index.htm index.nginx-debian.html;
 
-    root /var/www/html;
-    index index.php index.html;
+		location / {
+			try_files $uri $uri/ =404;
+		}
 
-    location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
-
-    location ~ \.php$ {
-        include fastcgi_params;
-        fastcgi_pass wordpress:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    }
-    }
+		location ~ \.php$ {
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
+		}
+	}
 }
