--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,19 @@
+# Database configuration
+SQL_DATABASE=wordpress_db
+SQL_USER=user1
+SQL_PASSWORD=QWerty4242
 
-MYSQL_DATABASE=mariadb
-MYSQL_USER=user1
-MYSQL_PASSWORD=<QWerty4242
-
+# WordPress configuration
 WP_URL=https://tviejo.42.fr
 WP_TITLE=MyBadSite
 WP_ADMIN_USER=tviejo
 WP_ADMIN_PASSWORD=QWerty4242
 WP_ADMIN_EMAIL=tviejo@example.com
 
+# WordPress user configuration
 WP_USER=user1
 WP_USER_EMAIL=user1@example.com
 WP_USER_PASSWORD=QWerty4242
 
+# General settings
 DOMAIN_NAME=tviejo.42.fr
