--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,15 +1,12 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get upgrade -y && apt-get install mariadb-server -y
+RUN apt-get update && apt-get upgrade -y && apt-get install -y mariadb-server
 
 COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-
 COPY tools/script.sh .
 
 RUN mkdir -p /var/run/mysqld && chown -R mysql:mysql /var/run/mysqld && chmod 755 /var/run/mysqld
-
-RUN chmod 755 ./script.sh 
+RUN chmod 755 ./script.sh
 
 ENTRYPOINT ["./script.sh"]
-
-CMD ["mysqlsafe"]
+CMD ["mysqld"]
